--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.12",
+    "devconnector": "file:",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
     "gravatar": "^1.8.2",
