--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,38 +1,46 @@
 {
-  "name": "client",
-  "version": "0.1.0",
+  "name": "admindashboard",
   "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "@syncfusion/ej2": "^21.1.38",
+    "@syncfusion/ej2-react-calendars": "^21.1.38",
+    "@syncfusion/ej2-react-charts": "^21.1.38",
+    "@syncfusion/ej2-react-dropdowns": "^21.1.38",
+    "@syncfusion/ej2-react-grids": "^21.1.38",
+    "@syncfusion/ej2-react-inputs": "^21.1.38",
+    "@syncfusion/ej2-react-kanban": "^21.1.37",
+    "@syncfusion/ej2-react-popups": "^21.1.37",
+    "@syncfusion/ej2-react-richtexteditor": "^21.1.37",
+    "@syncfusion/ej2-react-schedule": "^21.1.38",
+    "admindashboard": "file:",
+    "axios": "^1.6.1",
+    "dotenv": "^16.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-export-table-to-excel": "^1.0.6",
+    "react-icons": "^4.8.0",
+    "react-js-loader": "^0.1.3",
+    "react-modal": "^3.16.1",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.10.0",
+    "recharts": "^2.9.3",
+    "xlsx": "^0.18.5"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
+    "vite": "^4.2.0"
   }
 }
